<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/relativeLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_pages"
    android:orientation="vertical">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/backgroundColor"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingBottom="50dp"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin">

            <ImageView
                android:id="@+id/title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:contentDescription="@drawable/victory_text"
                android:src="@drawable/victory_text" />

            <LinearLayout
                android:id="@+id/layout1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/title"
                android:gravity="start"
                android:orientation="horizontal">

                <pis03_2016.savealltherobots.view.viewclass.TypeFaceTextView
                    android:id="@+id/txtScoreSS"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:shadowColor="#000000"
                    android:shadowDx="2"
                    android:shadowDy="2"
                    android:shadowRadius="9.0"
                    android:text="@string/score"
                    android:textColor="#FFD700"
                    android:textSize="20sp" />

                <pis03_2016.savealltherobots.view.viewclass.TypeFaceTextView
                    android:id="@+id/txtVarScoreSS"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingLeft="15dp"
                    android:shadowColor="#000000"
                    android:shadowDx="2"
                    android:shadowDy="2"
                    android:shadowRadius="9.0"
                    android:text="0000"
                    android:textColor="#DBA901"
                    android:textSize="22sp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/layout2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/layout1"
                android:orientation="horizontal">

                <pis03_2016.savealltherobots.view.viewclass.TypeFaceTextView
                    android:id="@+id/txtSavedRobotsSS"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:shadowColor="#000000"
                    android:shadowDx="2"
                    android:shadowDy="2"
                    android:shadowRadius="9.0"
                    android:text="@string/savedRobots"
                    android:textColor="#FFD700"
                    android:textSize="20sp" />

                <pis03_2016.savealltherobots.view.viewclass.TypeFaceTextView
                    android:id="@+id/txtVarSavedRobotsSS"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:paddingLeft="15dp"
                    android:shadowColor="#000000"
                    android:shadowDx="2"
                    android:shadowDy="2"
                    android:shadowRadius="9.0"
                    android:text="0000"
                    android:textColor="#DBA901"
                    android:textSize="22sp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/layout3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/layout2"
                android:orientation="horizontal">

                <pis03_2016.savealltherobots.view.viewclass.TypeFaceTextView
                    android:id="@+id/txtCompletedLevelsSS"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:shadowColor="#000000"
                    android:shadowDx="2"
                    android:shadowDy="2"
                    android:shadowRadius="9.0"
                    android:text="@string/completedLevels"
                    android:textColor="#FFD700"
                    android:textSize="20sp" />

                <pis03_2016.savealltherobots.view.viewclass.TypeFaceTextView
                    android:id="@+id/txtVarCompletedLevelsSS"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:paddingLeft="15dp"
                    android:shadowColor="#000000"
                    android:shadowDx="2"
                    android:shadowDy="2"
                    android:shadowRadius="9.0"
                    android:text="0000"
                    android:textColor="#DBA901"
                    android:textSize="22sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp">

                <pis03_2016.savealltherobots.view.viewclass.TypeFaceTextView
                    android:id="@+id/txtItemUnlocked"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:shadowColor="#000000"
                    android:shadowDx="2"
                    android:shadowDy="2"
                    android:shadowRadius="9.0"
                    android:text="@string/unlock"
                    android:textColor="#FFD700"
                    android:textSize="24dp"
                    android:textStyle="bold" />
            </LinearLayout>


            <LinearLayout
                android:id="@+id/layout4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingBottom="20dp"
                android:paddingTop="10dp">

                <ImageView
                    android:id="@+id/unlockedItem"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight=".3"
                    android:src="@drawable/robot_gold" />

                <pis03_2016.savealltherobots.view.viewclass.TypeFaceTextView
                    android:id="@+id/txtItemDescription"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="30dp"
                    android:layout_weight="1"
                    android:paddingLeft="15dp"
                    android:shadowColor="#000000"
                    android:shadowDx="2"
                    android:shadowDy="2"
                    android:shadowRadius="9.0"
                    android:text="@string/description_robotGold"
                    android:textColor="#DBA901"
                    android:textSize="12sp"
                    android:textStyle="bold" />
            </LinearLayout>

        </LinearLayout>

    </ScrollView>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="#99000000"
        android:padding="4dp">

        <TextView
            android:id="@+id/constructNextLevelLoaderText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_margin="14dp"
            android:gravity="center"
            android:text="@string/loading"
            android:textColor="#FFFFFF"
            android:textSize="15sp" />

        <Button
            android:id="@+id/btnNextLevel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:background="@drawable/button_main"
            android:onClick="onClickNextLevel"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:text="@string/play"
            android:visibility="gone" />

        <ProgressBar
            android:id="@+id/progressBar"
            android:layout_width="50dp"

            android:layout_height="50dp"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true" />

    </RelativeLayout>

</RelativeLayout>
