<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:id="@+id/root_ll_layout"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/wallpaper"
    android:orientation="vertical">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin">

        <ImageView
            android:id="@+id/iv_title"
            android:layout_width="wrap_content"
            android:layout_height="150dp"
            android:layout_gravity="center_horizontal"
            android:background="@drawable/logo_index"
            android:contentDescription="Save all the robots image" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:paddingLeft="25dp"
            android:paddingRight="25dp">

            <Button
                android:id="@+id/play_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@drawable/button_main"
                android:drawableLeft="@drawable/button_play_img"
                android:onClick="play"
                android:paddingLeft="20dp"
                android:text="@string/play"
                android:textColor="#393B0B" />

            <Button
                android:id="@+id/highscores_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:background="@drawable/button_main"
                android:drawableLeft="@drawable/button_highscores_img"
                android:onClick="goHighScoreActivity"
                android:paddingLeft="20dp"
                android:text="Highscores"
                android:textColor="#393B0B" />

            <Button
                android:id="@+id/settings_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:background="@drawable/button_main"
                android:drawableLeft="@drawable/button_settings_img"
                android:onClick="goSettingsActivity"
                android:paddingLeft="20dp"
                android:text="@string/settings"
                android:textColor="#393B0B" />

            <Button
                android:id="@+id/exit_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:background="@drawable/button_main"
                android:drawableLeft="@drawable/button_exit_img"
                android:onClick="exit"
                android:paddingLeft="20dp"
                android:text="@string/exit"
                android:textColor="#393B0B" />

            <ImageView
                android:id="@+id/iv_main_robotimage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:src="@drawable/robot_gold" />

        </LinearLayout>

    </LinearLayout>


</LinearLayout>
